finalized shift note UI with bugfixes and by adding hints and actions encouraging the use of the Omaha System

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -53,6 +53,11 @@
     margin-left: 6px
     margin-right: 6px
     font-size: 1.5em
+.q-btn-group
+  .q-btn
+    overflow: hidden
+    text-overflow: ellipsis
+    line-height: 1.3
 .q-card__section+.q-card__section
   padding-top: 0
 .q-stepper__step
